spacing and fix display of Mike’s image

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -55,7 +55,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: _palette(fg-body-bold);
+		color: _palette(bg);
 		font-family: _font(family-header);
 		font-weight: _font(weight-bold);
 		line-height: 1.5;
@@ -90,8 +90,10 @@
 	}
 
 	h2 {
+		color: _palette(fg-body-bold);
 		text-transform: uppercase;
 		font-size: 1.75em;
+		margin-bottom: 1em;
 	}
 
 	h3 {
@@ -100,6 +102,7 @@
 	}
 
 	h4 {
+		color: _palette(fg-body-bold);
 		font-size: 1em;
 	}
 
